--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,10 +1,9 @@
 # MySQL properties
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/db4pp221
+db.url=jdbc:mysql://localhost:3306/myuser
 db.username=root
 db.password=root
-db.entity.package=web.model
-
+db.entity.package=model
 # Hibernate properties
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
